filestash/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filestash-main
  namespace: filestash-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`files.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: filestash-main
          namespace: filestash-k8s
          passHostHeader: true
          port: 8334
          scheme: http
  tls:
    domains:
      - main: files.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
